--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <title> Home page and My first Page</title>
+        <title> Home page and My first Page Change to be pushed to github</title>
     </head>
     <body>
         <nav></nav>
